# pigeon

./: README.md  pyproject.toml
src/pigeon/: __init__.py  _errors.py  _eval.py  _locales.py  _parser.py
tests/: test_errors.py  test_eval.py  test_integration.py  test_locales.py  test_parse.py  test_select.py
